# llmops

./: .env.example  .gitignore  CHEATSHEET.md  README.md  docker-compose.yml  models.toml  status.sh
archive/vllm/: .env.example  README.md  docker-compose.yml  status.sh
bench/: llamacpp_bench.py  regression.py  results.md  run_scenario.sh  run_vllm_bench.sh  smoke.py  spend_report.py  tool_trajectory.py
docs/: DEPLOYMENT_LOG.md  architecture.md  cli.md  decision.md  hardware.md  research.md  routing-policy.md
hosts/: example.toml  home-compute.toml
llmops/: __init__.py  cli.py  host.py  registry.py  runner.py
router/: codex_packet.py  prompts.py  pyproject.toml  rates.json  schema.py  server.py  telemetry.py
scripts/: chat.py  install-boot-fix.sh  install-skills.sh  recover-after-boot.sh  run-router.sh  use-both.sh  use-exec.sh  use-smart.sh
skills/add-model/: SKILL.md
tests/: _common.py  agent_decision_schema.py  smoke_exec.py  smoke_smart.py
