[project]
name = "local-agent-router"
version = "0.1.0"
description = "OpenAI-compatible router for the local-llmops two-tier stack"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
